# picoPark

./: LICENSE  README.md  picoPark.code-workspace
bme280/: CMakeLists.txt  LICENSE  README.md
bme280/examples/: CMakeLists.txt
bme280/examples/BasicReadings/: CMakeLists.txt  basicReadings.cpp
bme280/include/: SparkFun_Bme280_Pico.h
bme280/src/: CMakeLists.txt  SparkFun_Bme280_Pico.cpp
docs/: README.md
qwiicAlphanumeric/: CMakeLists.txt  README.md
qwiicAlphanumeric/examples/: CMakeLists.txt  led_blink.cpp
qwiicAlphanumeric/examples/animateArrow/: CMakeLists.txt  animateArrow.cpp
qwiicAlphanumeric/examples/animateOuterBox/: CMakeLists.txt  animateOuterBox.cpp
qwiicAlphanumeric/examples/animateOuterBoxDigit/: CMakeLists.txt  animateOuterBoxDigit.cpp
qwiicAlphanumeric/examples/displayText/: CMakeLists.txt  displayText.cpp
qwiicAlphanumeric/examples/solidigmDisplayText/: CMakeLists.txt  solidigmDisplayText.cpp
qwiicAlphanumeric/include/: SparkFun_Alphanumeric_Display_Animation_Pico.h  SparkFun_Alphanumeric_Display_Pico.h
qwiicAlphanumeric/src/: CMakeLists.txt  SparkFun_Alphanumeric_Display.cpp  SparkFun_Alphanumeric_Display_Animations_Pico.cpp
wishList/: wishList.md
